[gd_scene load_steps=4 format=3 uid="uid://8e0734sbmdy1"]

[ext_resource type="Script" path="res://pages/mission_editor/mission_selector_popup/missions_list_item.gd" id="1_bpxpt"]
[ext_resource type="PackedScene" uid="uid://bjgbkm0q3g02x" path="res://common/interface/craft_display/craft_display.tscn" id="1_rbuqd"]
[ext_resource type="LabelSettings" uid="uid://c17ibv5bt7jtw" path="res://common/resources/small_transparent_text_label_settings.tres" id="3_qa6fh"]

[node name="MissionsListItem" type="MarginContainer"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_bpxpt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_type_variation = &"PanelDarken"

[node name="CraftDisplay" parent="HBoxContainer/Panel" instance=ExtResource("1_rbuqd")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DisplayNameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Display Name"

[node name="IDLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "987654321-987654321"
label_settings = ExtResource("3_qa6fh")

[node name="EntitiesCountLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Entities: 1"

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
